NIAD-3301: Update MedicationRequest.medication datatype support. (#1250)
* NIAD-3301: Update MedicationRequest.medication datatype support

* Add test and test file where the `MedicationRequest` contains a `medicationCodableConcept` and not a `medication.reference` to ensure that this is used if it is provided.
* Ensure existing tests still pass using the original functionality
* Update `MedicationStatementMapper` to implement this.

* Added new test file and new addition to the bundle to account for codeable concept

* Implemented new implementation to print medication codeable concept in output for supporting info

* * Refactor `RequestStatementMapperTest` for readability.
* Fix Checkstyle issues.

* * Update CHANGELOG.md

---------

Co-authored-by: Chiara <chiara.mapelli@madetech.com>